--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
                             }
                         ],
                         "styles": [
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css",
                             "src/styles.css"
                         ],
                         "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
