--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,9 @@
                             }
                         ],
                         "styles": [
+                            "./node_modules/ag-grid-community/styles/ag-grid.css",
+                            "./node_modules/ag-grid-community/styles/ag-theme-quartz.css",
+                            "./node_modules/ag-grid-community/styles/ag-theme-balham.min.css",
                             "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css",
                             "src/styles.css"
                         ],
